--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FuriousWarrior - Career Growth & Success</title>
+    <title>FuriousWarrior - Cybersecurity Solutions & Services</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,71 +12,65 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- Header (Same as provided) -->
-    <header class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="/">FuriousWarrior</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/products">Products</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/counseling">Counseling</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/speaking">Speaking</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/growth-lab">Growth Lab</a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contact">Contact Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/login">Login</a>
-            </li>
-          </ul>
+    <header class="navbar">
+      <div class="container-nav">
+        <div class="logo">
+          <img src="assets/logo.avif" alt="logo" width="50px" />
+          <a href="/">FuriousWarrior</a>
         </div>
+        <button class="menu-toggle" aria-label="Toggle menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+        <nav class="nav-menu">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="pages/services.html">Services</a></li>
+            <li><a href="pages/about.html">About</a></li>
+            <li>
+              <a href="https://furiouswarrior.beehiiv.com/" target="_blank"
+                >Blog</a
+              >
+            </li>
+            <li><a href="/contact">Contact</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="/cart"
+                ><i class="fas fa-shopping-cart"></i> Cart</a
+              >
+            </li>
+            <li><a href="/login" class="login-btn">Login</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
 
     <main>
-      <!-- Hero Section -->
       <section class="hero-section">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-6">
-              <h1 class="display-4 mb-4">Accelerate Your Career Growth</h1>
+              <h1 class="display-4 mb-4">Secure Your Digital Future</h1>
               <p class="lead mb-4">
-                Expert guidance for career development, interview preparation,
-                and professional success.
+                Advanced cybersecurity solutions to protect your business and
+                personal data.
               </p>
-              <div class="d-flex gap-3">
-                <a href="/services" class="btn btn-custom">Explore Services</a>
-                <a href="/contact" class="btn btn-outline-light">Contact Us</a>
+              <div class="d-flex gap-3 mb-1">
+                <a href="/services" class="btn btn-custom"
+                  >Explore Cybersecurity Services</a
+                >
+                <a href="/contact" class="btn btn-outline-light"
+                  >Get a Free Assessment</a
+                >
               </div>
             </div>
             <div class="col-lg-6">
               <img
                 src="https://via.placeholder.com/600x400"
-                alt="Career Growth"
+                alt="Cybersecurity"
                 class="img-fluid rounded shadow-lg"
               />
             </div>
@@ -87,41 +81,43 @@
       <!-- Features Section -->
       <section class="py-5">
         <div class="container">
-          <h2 class="text-center mb-5">Why Choose FuriousWarrior?</h2>
+          <h2 class="text-center mb-5">
+            Why Choose FuriousWarrior for Cybersecurity?
+          </h2>
           <div class="row g-4">
             <div class="col-md-4">
               <div class="feature-card shadow p-4">
                 <div class="feature-icon">
-                  <i class="fas fa-graduation-cap"></i>
+                  <i class="fas fa-shield-alt"></i>
                 </div>
-                <h3 class="h4">Expert Mentorship</h3>
+                <h3 class="h4">Cybersecurity Expertise</h3>
                 <p>
-                  Learn from industry professionals with years of experience in
-                  career counseling and development.
+                  Work with industry professionals who specialize in threat
+                  management and data security.
                 </p>
               </div>
             </div>
             <div class="col-md-4">
               <div class="feature-card shadow p-4">
                 <div class="feature-icon">
-                  <i class="fas fa-users"></i>
+                  <i class="fas fa-lock"></i>
                 </div>
-                <h3 class="h4">Personalized Approach</h3>
+                <h3 class="h4">Customized Security Solutions</h3>
                 <p>
-                  Get customized guidance tailored to your specific career goals
-                  and aspirations.
+                  Tailored strategies to safeguard your unique business assets
+                  and secure your data.
                 </p>
               </div>
             </div>
             <div class="col-md-4">
               <div class="feature-card shadow p-4">
                 <div class="feature-icon">
-                  <i class="fas fa-chart-line"></i>
+                  <i class="fas fa-user-shield"></i>
                 </div>
                 <h3 class="h4">Proven Results</h3>
                 <p>
-                  Join thousands of successful professionals who have
-                  accelerated their career growth with us.
+                  Trusted by businesses worldwide to prevent data breaches and
+                  ensure digital security.
                 </p>
               </div>
             </div>
@@ -136,25 +132,25 @@
             <div class="col-md-3 col-6">
               <div class="stat-item">
                 <div class="stat-number">500+</div>
-                <div>Success Stories</div>
+                <div>Protected Businesses</div>
               </div>
             </div>
             <div class="col-md-3 col-6">
               <div class="stat-item">
-                <div class="stat-number">50+</div>
-                <div>Expert Mentors</div>
+                <div class="stat-number">75+</div>
+                <div>Certified Experts</div>
               </div>
             </div>
             <div class="col-md-3 col-6">
               <div class="stat-item">
-                <div class="stat-number">1000+</div>
-                <div>Career Sessions</div>
+                <div class="stat-number">2000+</div>
+                <div>Security Audits</div>
               </div>
             </div>
             <div class="col-md-3 col-6">
               <div class="stat-item">
-                <div class="stat-number">95%</div>
-                <div>Success Rate</div>
+                <div class="stat-number">99%</div>
+                <div>Incident Resolution Rate</div>
               </div>
             </div>
           </div>
@@ -164,16 +160,15 @@
       <!-- Services Preview -->
       <section class="py-5">
         <div class="container">
-          <h2 class="text-center mb-5">Our Services</h2>
+          <h2 class="text-center mb-5">Our Cybersecurity Services</h2>
           <div class="row g-4">
             <div class="col-md-6">
               <div class="card h-100 border-0 shadow">
                 <div class="card-body p-4">
-                  <h3 class="card-title">Interview Preparation</h3>
+                  <h3 class="card-title">Threat Detection & Response</h3>
                   <p class="card-text">
-                    Get comprehensive interview preparation with our expert
-                    mentors. Perfect for both beginners and experienced
-                    professionals.
+                    Fast and effective threat detection and response services to
+                    secure your business.
                   </p>
                   <a href="/services" class="btn btn-custom">Learn More</a>
                 </div>
@@ -182,10 +177,10 @@
             <div class="col-md-6">
               <div class="card h-100 border-0 shadow">
                 <div class="card-body p-4">
-                  <h3 class="card-title">Career Counseling</h3>
+                  <h3 class="card-title">Cybersecurity Consulting</h3>
                   <p class="card-text">
-                    Get personalized career guidance and develop a roadmap for
-                    your professional growth.
+                    Expert advice on best practices, compliance, and risk
+                    management for your organization.
                   </p>
                   <a href="/services" class="btn btn-custom">Learn More</a>
                 </div>
@@ -202,8 +197,8 @@
             <div class="col-md-8 text-center">
               <h2 class="mb-4">Stay Updated</h2>
               <p class="mb-4">
-                Subscribe to our newsletter for the latest career insights and
-                updates.
+                Subscribe to our newsletter for the latest cybersecurity
+                insights and updates.
               </p>
               <form class="d-flex gap-2">
                 <input
@@ -219,13 +214,12 @@
       </section>
     </main>
 
-    <!-- Footer (Same as provided but with added social icons) -->
     <footer class="bg-dark text-light py-4 mt-5">
       <div class="container">
         <div class="row">
           <div class="col-md-4">
             <h5>FuriousWarrior</h5>
-            <p>Your partner in career growth and success.</p>
+            <p>Your partner in cybersecurity and digital protection.</p>
           </div>
           <div class="col-md-4">
             <h5>Quick Links</h5>
@@ -259,8 +253,7 @@
       </div>
     </footer>
 
-    <!-- WhatsApp Button -->
-    <a href="https://wa.me/1234567890" class="float-btn" target="_blank">
+    <a href="https://wa.me/6280730669" class="float-btn" target="_blank">
       <i class="fab fa-whatsapp"></i>
     </a>
 
