--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <link rel="shortcut icon" href="assets/logo.avif" type="image/x-icon">
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
