--- a/frontend/pages/about.html
+++ b/frontend/pages/about.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <link rel="shortcut icon" href="../assets/logo.avif" type="image/x-icon" />
     <link rel="stylesheet" href="../styles/about.css" />
   </head>
   <body>
@@ -31,7 +32,11 @@
             <li><a href="../index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="https://furiouswarrior.beehiiv.com/" target="_blank">Blog</a></li>
+            <li>
+              <a href="https://furiouswarrior.beehiiv.com/" target="_blank"
+                >Blog</a
+              >
+            </li>
             <li><a href="/contact">Contact</a></li>
             <li class="nav-item">
               <a class="nav-link" href="/cart"
@@ -194,5 +199,6 @@
     </a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../main.js"></script>
   </body>
 </html>
