--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,13 +31,13 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="pages/services.html">Services</a></li>
-            <li><a href="pages/about.html">About</a></li>
             <li>
               <a href="https://furiouswarrior.beehiiv.com/" target="_blank"
-                >Blog</a
+              >Blog</a
               >
             </li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="pages/about.html">About</a></li>
+            <li><a href="pages/contact.html">Contact</a></li>
             <li class="nav-item">
               <a class="nav-link" href="/cart"
                 ><i class="fas fa-shopping-cart"></i> Cart</a
