--- a/frontend/pages/services.html
+++ b/frontend/pages/services.html
@@ -20,7 +20,7 @@
       <div class="container-nav">
         <div class="logo">
           <img src="../assets/logo.avif" alt="logo" width="50px" />
-          <a href="/">FuriousWarrior</a>
+          <a href="../index.html">FuriousWarrior</a>
         </div>
         <button class="menu-toggle" aria-label="Toggle menu">
           <span></span>
@@ -31,13 +31,13 @@
           <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="about.html">About</a></li>
             <li>
               <a href="https://furiouswarrior.beehiiv.com/" target="_blank"
-                >Blog</a
+              >Blog</a
               >
             </li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li class="nav-item">
               <a class="nav-link" href="/cart"
                 ><i class="fas fa-shopping-cart"></i> Cart</a
