Adds Social Icons

--- a/frontend/pages/about.html
+++ b/frontend/pages/about.html
@@ -169,22 +169,31 @@
         <div class="row">
           <div class="col-md-4">
             <h5>FuriousWarrior</h5>
-            <p>Your partner in career growth and success.</p>
+            <p>Your partner in cybersecurity and digital protection.</p>
           </div>
           <div class="col-md-4">
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="/terms">Terms and Conditions</a></li>
-              <li><a href="/privacy">Privacy Policy</a></li>
-              <li><a href="/refund">Cancel & Refund Policy</a></li>
-              <li><a href="/imprint">Imprint</a></li>
+              <li>
+                <a href="/terms" class="text-light">Terms and Conditions</a>
+              </li>
+              <li><a href="/privacy" class="text-light">Privacy Policy</a></li>
+              <li>
+                <a href="/refund" class="text-light">Cancel & Refund Policy</a>
+              </li>
+              <li><a href="/imprint" class="text-light">Imprint</a></li>
             </ul>
           </div>
           <div class="col-md-4">
             <h5>Contact Us</h5>
             <p>Email: info@furiouswarrior.com</p>
             <p>Phone: +1 (123) 456-7890</p>
-            <div class="social-icons"></div>
+            <div class="social-icons">
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
           </div>
         </div>
         <hr />
