--- a/frontend/pages/contact.html
+++ b/frontend/pages/contact.html
@@ -202,42 +202,48 @@
       </section>
     </main>
 
-    <footer class="footer py-4 mt-5">
+    <footer class="bg-dark text-light py-4 mt-5">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
-            <h5>FuriousWarrior Cybersecurity</h5>
-            <p>Protecting your digital assets with cutting-edge solutions.</p>
+          <div class="col-md-4">
+            <h5>FuriousWarrior</h5>
+            <p>Your partner in cybersecurity and digital protection.</p>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <h5>Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="/terms" class="text-white">Terms of Service</a></li>
-              <li><a href="/privacy" class="text-white">Privacy Policy</a></li>
-              <li><a href="/contact" class="text-white">Contact Us</a></li>
+              <li>
+                <a href="/terms" class="text-light">Terms and Conditions</a>
+              </li>
+              <li><a href="/privacy" class="text-light">Privacy Policy</a></li>
+              <li>
+                <a href="/refund" class="text-light">Cancel & Refund Policy</a>
+              </li>
+              <li><a href="/imprint" class="text-light">Imprint</a></li>
             </ul>
           </div>
-          <div class="col-md-3">
-            <h5>Connect With Us</h5>
+          <div class="col-md-4">
+            <h5>Contact Us</h5>
+            <p>Email: info@furiouswarrior.com</p>
+            <p>Phone: +1 (123) 456-7890</p>
             <div class="social-icons">
-              <a href="#" class="text-white me-2"
-                ><i class="fab fa-facebook"></i
-              ></a>
-              <a href="#" class="text-white me-2"
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a href="#" class="text-white me-2"
-                ><i class="fab fa-linkedin"></i
-              ></a>
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
           </div>
         </div>
-        <hr class="mt-4 bg-light" />
+        <hr />
         <div class="text-center">
-          <p>&copy; 2024 FuriousWarrior Cybersecurity. All rights reserved.</p>
+          <p>&copy; 2024 FuriousWarrior. All rights reserved.</p>
         </div>
       </div>
     </footer>
+
+    <a href="https://wa.me/6280730669" class="float-btn" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+    </a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
