--- a/frontend/pages/about.html
+++ b/frontend/pages/about.html
@@ -39,12 +39,12 @@
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li class="nav-item">
-              <a class="nav-link" href="/cart"
+              <a class="nav-link" href="/"
                 ><i class="fas fa-shopping-cart"></i> Cart</a
               >
             </li>
 
-            <li><a href="/login" class="login-btn">Login</a></li>
+            <li><a href="/" class="login-btn">Login</a></li>
           </ul>
         </nav>
       </div>
