--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <link rel="shortcut icon" href="assets/logo.avif" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/logo.avif" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -33,12 +33,12 @@
             <li><a href="pages/services.html">Services</a></li>
             <li>
               <a href="https://furiouswarrior.beehiiv.com/" target="_blank"
-              >Blog</a
+                >Blog</a
               >
             </li>
             <li><a href="pages/about.html">About</a></li>
             <li><a href="pages/contact.html">Contact</a></li>
-            <li class="nav-item">
+            <li class="nav-item cart">
               <a class="nav-link" href="/"
                 ><i class="fas fa-shopping-cart"></i> Cart</a
               >
