--- a/frontend/pages/contact.html
+++ b/frontend/pages/contact.html
@@ -37,7 +37,7 @@
             </li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li class="nav-item">
+            <li class="nav-item cart">
               <a class="nav-link" href="/"
                 ><i class="fas fa-shopping-cart"></i> Cart</a
               >
@@ -246,6 +246,7 @@
     </a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../main.js"></script>
     <script>
       document
         .getElementById("contactForm")
