--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -29,15 +29,15 @@
         <nav class="nav-menu">
           <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="pages/services.html">Services</a></li>
+            <li><a href="services.html">Services</a></li>
             <li>
               <a href="https://furiouswarrior.beehiiv.com/" target="_blank"
                 >Blog</a
               >
             </li>
-            <li><a href="pages/about.html">About</a></li>
-            <li><a href="pages/contact.html">Contact</a></li>
-            <li class="nav-item">
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li class="nav-item cart">
               <a class="nav-link" href="/"
                 ><i class="fas fa-shopping-cart"></i> Cart</a
               >
