--- a/frontend/pages/signin.html
+++ b/frontend/pages/signin.html
@@ -37,7 +37,7 @@
             </li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li class="nav-item">
+            <li class="nav-item cart">
               <a class="nav-link" href="/"
                 ><i class="fas fa-shopping-cart"></i> Cart</a
               >
@@ -183,12 +183,15 @@
             localStorage.setItem("fullname", data.fullname);
             localStorage.setItem("email", email);
             localStorage.setItem("phone", data.phone);
+            localStorage.setItem("role", data.role);
             showAlert(
               "Login successful! Redirecting to dashboard...",
               "success"
             );
             setTimeout(() => {
-              window.location.href = "dashboard.html";
+              if (data.role == "USER") window.location.href = "dashboard.html";
+              if (data.role == "ADMIN")
+                window.location.href = "../admin/dashboard.html";
             }, 2000);
           } else {
             showAlert("Invalid email or password. Please try again.", "danger");
